lua-factory: get correct typename on warnings

lua_typename (L, -1) is wrong and returns 'no value'. The correct way is
using lua_type(L, -1) as the second parameter.

https://bugzilla.gnome.org/show_bug.cgi?id=755447